# token-2022-extensions-skill

./: .gitignore  KIT-INTEGRATION.md  README.md  install-custom.sh  install.sh
agents/: token-extensions-engineer.md  token-extensions-reviewer.md
assets/: README.md  demo.tape  run-demo.sh
commands/: add-transfer-hook.md  audit-token-2022.md  design-token.md
evals/: evals.md
program/: Cargo.toml  README.md
program/e2e/: fetch-fixtures.sh  package-lock.json  package.json  transfer-hook.e2e.ts  tsconfig.json
program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: logic.rs
rules/: token-2022.md
skill/: SKILL.md
skill/reference/: clients.md  compatibility-matrix.md  confidential-transfers.md  decision-tree.md  extensions-catalog.md  metadata-and-groups.md  resources.md  security.md  testing.md  transfer-fees.md  transfer-hooks.md
skill/scripts/: check-extensions.ts  package-lock.json  package.json
